src/App.scss
@import url("https://fonts.googleapis.com/css2?family=Overpass&display=swap");

main {
  width: 100vw;
  max-width: 100vw;
  overflow: hidden;
  font-family: "Overpass", sans-serif;
  padding: 50px 0;
}

.selected::before {
  content: "";
  width: 36px;
  height: 2px;
  position: absolute;
  bottom: 9px;
  background: #707070;
}

// header >
nav > ul {
  display: flex;
  justify-content: center;
  padding: 0;

  @mixin item-base($image) {
    content: "";
    width: 36px;
    height: 36px;
    position: absolute;
    background-image: $image;
  }

  li {
    list-style: none;
    max-width: 50px;
  }

  a {
    color: transparent;
  }

  a[aria-label="home"]::before {
    @include item-base(url(./assets/images/ic_home.svg));
  }

  a[aria-label="about"]::before {
    @include item-base(url(./assets/images/ic_about.svg));
  }

  a[aria-label="work"]::before {
    @include item-base(url(./assets/images/ic_work.svg));
  }

  a[aria-label="work"]::before {
    @include item-base(url(./assets/images/ic_work.svg));
  }

  a[href="https://github.com/lemamon"]::before
  {
    @include item-base(url(./assets/images/ic_github.svg));
  }

  a[href="https://linkedin.com/in/lemamon"]::before
  {
    @include item-base(url(./assets/images/ic_linkedin.svg));
  }

  a[href="https://instagram.com/lemamon"]::before
  {
    @include item-base(url(./assets/images/ic_instagram.svg));
  }

  a[href="https://twitter.com/lemamon"]::before
  {
    @include item-base(url(./assets/images/ic_twitter.svg));
  }
}

header {
  z-index: 1;
  & > nav > ul {
    position: fixed;
    align-items: center;
    width: 100%;
    height: 65px;
    background: #fff;
    margin: 0;
    top: 0;
  }
}

footer {
  position: fixed;
  bottom: 0;
  min-width: 100vw;
  background-color: #fff;
  @media (min-width: 1024px) {
    nav > ul {
      justify-content: flex-end;
    }
  }
}

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.container {
  width: 100%;
  height: 100%;
  min-height: 90vh;
  max-width: 1440px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  @media (min-width: 1024px) {
    overflow: hidden;
  }
}

.home {
  padding: 20px 60px 10px;

  .container {
    justify-content: flex-start;
    align-items: flex-start;
  }

  .home-video {
    object-fit: cover;
    width: 100%;
    position: relative;
    height: 100%;
    top: -50px;
    left: 0;
    z-index: -1;

    @media (min-width: 1024px) {
      height: auto;
      top: -100px;
    }
  }

  .title-container {
    display: flex;
    flex-direction: column;
    justify-content: left;
    width: 100%;
  }

  .title {
    width: 187px;
    font-size: 50px;
    line-height: 1.2;
    text-align: left;
    color: #000000;
    margin: 0;
    font-weight: normal;
  }

  .subtitle {
    height: 20px;
    font-size: 20px;
    font-weight: normal;
    line-height: 1.45;
    color: #a1a1a1;
    text-transform: uppercase;
    margin: 0;
  }

  .banner {
    width: 80vw;
    margin-top: 24px;
    max-width: 400px;
    min-width: 300px;
  }
}

.about {
  background-color: #fe5454;
  min-height: 100%;

  .email {
    text-decoration: none;
    color: white;
    font-weight: bold;
  }

  & h3 {
    width: 321px;
    height: 14px;
    margin: 0 10px 10px 0;
    font-family: Overpass;
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.44;
    letter-spacing: normal;
    text-align: left;
    color: #000000;
  }

  & p {
    width: 321px;
    margin: 10px 10px 26px 0;
    font-family: Overpass;
    font-size: 14px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.57;
    letter-spacing: normal;
    text-align: left;
    color: #ffffff;
  }

  .container {
    flex-direction: column-reverse;
    @media (min-width: 1024px) {
      flex-direction: row;
    }
  }

  .image-container {
    img {
      width: 370px;
      @media (min-width: 1024px) {
        width: 500px;
      }
    }
    figcaption {
      font-style: italic;
      text-align: center;
    }
  }
}

.list {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  height: 100%;
  padding-top: 100px;

  .item {
    width: 310px;
    height: 278px;
    margin: 20px 20px;
    padding: 10px 20px;
    overflow: scroll;
    border-radius: 10px;

    h3 {
      font-size: 18px;
      line-height: 1.57;
      text-align: left;
      color: #000000;
    }

    h5 {
      font-size: 12px;
      line-height: 1.42;
      text-align: left;
      color: #707070;
    }

    p {
      font-size: 11px;
      line-height: 2;
      letter-spacing: normal;
      text-align: left;
      color: #707070;
    }
  }
}

